# AiLab

./: README.txt  Ros.txt  srrg_thin.tar.bz2
homework0/: CMakeLists.txt  package.xml
homework0/src/: listener.cpp  min_distance.cpp
homework2/: CMakeLists.txt  REPORT_HOMEWORK1.txt  package.xml
homework2/src/: Transform.cpp
homework4/: CMakeLists.txt  package.xml
homework4/src/: find_near_obstacle.cpp
homework5/: CMakeLists.txt  package.xml
homework5/action/: Countdown.action
homework5/src/: CountdownServer.cpp  Start_Countdown.cpp  Stop_Countdown.cpp
homework6/: package.xml
projectAI/: CMakeLists.txt  package.xml
projectAI/launch/: Not_sim.launch  Not_sim2.launch  sim.launch  sim2.launch  sim3.launch
projectAI/src/: client.cpp  server.cpp
projectAI/stage_config/worlds/: lab_0.world  lab_1.world
